--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "fs-plus": "^2.3.1",
-    "pathwatcher": "^2.3.2"
+    "path": "^0.4.9"
   },
   "devDependencies": {}
 }
