--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "tstpackage",
   "main": "./lib/main",
-  "version": "0.0.0",
-  "description": "A short description of your package",
+  "version": "0.1.0",
+  "description": "Package for Atmo that show coverag inside of the Atom.io",
   "activationCommands": {
     "atom-workspace": "testcoverage:show"
   },
