--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "tstpackage",
+  "name": "Test coverage",
   "main": "./lib/main",
   "version": "0.1.0",
-  "description": "Package for Atmo that show coverag inside of the Atom.io",
+  "description": "Package for showing test coverage information inside of the Atom.io. Support update if LCOV information is updated",
   "activationCommands": {
     "atom-workspace": "testcoverage:show"
   },
