--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "Test coverage",
+  "name": "coverage-gutter",
   "main": "./lib/main",
-  "version": "0.1.0",
-  "description": "Package for showing test coverage information inside of the Atom.io. Support update if LCOV information is updated",
+  "version": "0.2.0",
+  "description": "Package for showing test coverage information inside of the Atom.io. Support refresh if LCOV information is updated",
   "activationCommands": {
     "atom-workspace": "testcoverage:show"
   },
