--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "atom": ">0.180.0"
   },
   "dependencies": {
-    "fs-plus": "^2.3.1",
-    "path": "^0.4.9"
+    "atom-space-pen-views": "^2.0.3",
+    "fs-plus": "^2.7.0",
+    "path": "^0.11.14"
   },
   "devDependencies": {}
 }
