--- a/package.json
+++ b/package.json
@@ -16,5 +16,7 @@
     "fs-plus": "^2.7.0",
     "path": "^0.11.14"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "event-kit": "^1.2.0"
+  }
 }
