--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   "dependencies": {
     "atom-space-pen-views": "^2.0.3",
     "fs-plus": "^2.7.0",
-    "path": "^0.11.14"
+    "path": "^0.11.14",
+    "event-kit": "^1.2.0"
   },
   "devDependencies": {
-    "event-kit": "^1.2.0"
+
   }
 }
