--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coverage-gutter",
   "main": "./lib/main",
-  "version": "0.16.0",
+  "version": "0.17.0",
   "description": "Shows the test coverage in the gutter(column with line numbers). Support refresh if LCOV information is updated",
   "activationCommands": {
     "atom-workspace": "testcoverage:show"
@@ -17,7 +17,5 @@
     "path": "^0.11.14",
     "event-kit": "^1.2.0"
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
